# voxi-ai-personal-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  deploy.sh  deploy_host.sh  install.sh  pyproject.toml  repo_config.ini  setup_pinchbench.sh
.dev_note/: DASHBOARD.md  TIZEN_AFTER-BUILD_COMMANDS.md  VOXI_AFTER-BUILD_COMMANDS.md  changesExplained_usingcodex-antigravity.md  plan1 Stop Request and Chat Response Routing Fix.md  plan2 Fix Zepto MCP Flow and Routing Reliability.md  plan3 Zepto MCP Flow Fix and Hardening.md
.dev_note/docs/: capability_expansion_plan.md  cart_mutation_robustness_design.md  codex_like_mcp_shopping_design.md  comprehensive_robustness_design.md  design_architecture.md  host_log_cleanup_design.md  implementation_plan.md  robust_agent_enhancements_design.md  tv_channel_prompt_editor_design.md  web_markdown_design.md
.github/workflows/: ci.yml  release-host-bundle.yml
.skills/: skills_links.md
data/config/: agent_roles.json  autonomous_trigger.json  channel_config.json  channels.json  fleet_config.json  llm_config_lmstudio.json  llm_config_mlx.json  mcp_servers.json  models.voice.json  offline_fallback.json  system_prompt.txt  tool_policy.json  voice_config.json
data/docs/: SHOPPING_MCP_WORKFLOW.md  ZEPTO_MCP_WORKFLOW.md
data/sample/: a2a_config.json.sample  agent_roles.json.sample  ota_config.json.sample  system_cli_config.json.sample
data/web/: app.js  index.html  style.css
data/web/sdk/: voxi-sdk.js
data/workflows/: mcp_sqlite_reload.workflow.md  mcp_swiggy_instamart.workflow.md  mcp_zepto.workflow.md
docs/: STRUCTURE.md  USAGE.md  VCLAW_FEATURES_GUIDE.md
mcphelper/: backup_mcp_http_bridge.py  mcp_http_bridge.py
packaging/: tizenclaw-debug.service  tizenclaw-tool-executor.service  tizenclaw.service
plans/: Plan1Tasks.md  Plan2_implementation_plan.md  Swigy_MCP_README.md  code_changes_explanation.md  how_to_use_mcp_shopping.md  implementation_plan.md  plan1.md  recentChangesByCodexAndCopilt.md  task.md  updatedPlan1.md  walkthrough.md
rust/: Cargo.toml  README.md
rust/crates/rusty-claude-cli/src/: init.rs  input.rs  lib.rs  render.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs
rust/crates/tclaw-plugins/src/: tests.rs
rust/crates/tclaw-runtime/src/: config.rs  session.rs
rust/crates/tclaw-runtime/src/prompt/: tests.rs
rust/crates/vclaw-api/: Cargo.toml
rust/crates/vclaw-api/tests/: client_integration.rs  openai_compat_integration.rs  proxy_integration.rs
rust/crates/vclaw-cli/: Cargo.toml
rust/crates/vclaw-commands/: Cargo.toml
rust/crates/vclaw-commands/src/: builtins.rs  tests.rs
rust/crates/vclaw-plugins/: Cargo.toml
rust/crates/vclaw-plugins/bundled/example-bundled/: plugin.json
rust/crates/vclaw-plugins/bundled/sample-hooks/: plugin.json
rust/crates/vclaw-plugins/src/: hooks.rs  lib.rs
rust/crates/vclaw-runtime/: Cargo.toml
rust/crates/vclaw-runtime/src/: bootstrap.rs  commands.rs  config.rs  doctor.rs  hooks.rs  lib.rs  mcp_client.rs  permissions.rs  plugin_lifecycle.rs  session.rs
rust/crates/vclaw-runtime/src/conversation/: engine.rs  tests.rs
rust/crates/vclaw-runtime/src/prompt/: tests.rs
rust/crates/vclaw-runtime/tests/: integration_tests.rs
rust/crates/vclaw-tools/: Cargo.toml
rust/crates/vclaw-tools/src/: builtins.rs  executor.rs  lib.rs  manifest.rs  registry.rs
rust/scripts/: run_mock_parity_diff.py
scripts/: ci_build.sh  create_host_release_bundle.sh  cross-build-aarch64.sh  pre-commit  run_host_system_contracts.sh  run_pinchbench_oauth.py  setup-hooks.sh  setup_hooks.sh  setup_ort_embedding.sh  start_mcp_tunnel.sh  test_host_bundle_install.sh  test_local_checkout_install.sh  test_source_install.sh  voxi-hostctl.sh
src/: __init__.py  main.py
src/libtizenclaw/: Cargo.toml
src/libtizenclaw-core/: Cargo.toml
src/libtizenclaw/src/: api.rs
src/tizenclaw/: Cargo.toml
src/tizenclaw-web-dashboard/: Cargo.toml
src/tizenclaw-web-dashboard/src/: main.rs
src/tizenclaw/src/: main.rs
src/tizenclaw/src/channel/: a2a_handler.rs  channel_factory.rs  mcp_client.rs  mcp_server.rs  mod.rs  telegram_client.rs  tv_channel.rs
src/tizenclaw/src/core/: agent_core.rs  agent_loop_state.rs  fallback_parser.rs  ipc_server.rs  on_device_embedding.rs  runtime_paths.rs  skill_capability_manager.rs  task_scheduler.rs  textual_skill_scanner.rs  tool_declaration_builder.rs  tool_indexer.rs  tool_policy.rs
src/tizenclaw/src/llm/: ollama.rs
src/tizenclaw/src/storage/: embedding_store.rs  memory_store.rs  session_store.rs
src/voxi/: Cargo.toml
src/voxi-cli/: Cargo.toml
src/voxi-cli/src/: main.rs
src/voxi-client/: Cargo.toml
src/voxi-client/include/: voxi.h
src/voxi-client/src/: api.rs  lib.rs
src/voxi-core/: Cargo.toml
src/voxi-core/include/: voxi_channel.h  voxi_curl.h  voxi_error.h  voxi_llm_backend.h
src/voxi-core/src/: curl_wrapper.rs  lib.rs  llm_types.rs
src/voxi-core/src/framework/: generic_linux.rs  mod.rs  paths.rs
src/voxi-tests/: Cargo.toml
src/voxi-tests/src/: client.rs  main.rs  scenario.rs
src/voxi-tool-executor/: Cargo.toml
src/voxi-tool-executor/src/: main.rs  peer_validator.rs
src/voxi-voice/: Cargo.toml
src/voxi-voice/src/: config.rs  engine.rs  events.rs  lib.rs  model_store.rs  sha256.rs  vad.rs
src/voxi-voice/src/audio/: backend_selector.rs  cpal_backend.rs  mod.rs  null_backend.rs
src/voxi-voice/src/correction/: mod.rs  passthrough.rs  qwen_onnx.rs  smollm2.rs
src/voxi-voice/src/stt/: mod.rs  moonshine.rs  null_stt.rs
src/voxi-voice/src/tts/: kokoro.rs  mod.rs  null_tts.rs
src/voxi-voice/src/wake_word/: keyword_onnx.rs  mod.rs  null_wake.rs  porcupine.rs
src/voxi-web-dashboard/: Cargo.toml
src/voxi-web-dashboard/src/: main.rs
src/voxi/.cargo/: config.toml
src/voxi/src/: main.rs
tests/: test_pinchbench_retry_accounting.py  test_pinchbench_runner_blackbox.py  test_write_pinchbench_score.py
tests/system/: hooks_external_disabled_by_default.json  hooks_pre_tool_deny.json  offline_suite.json  skills_list_and_invoke.json
tools/embedded/: generate_web_app.md
(+77 files in other folders)
