[workspace]
resolver = "2"
members = [
    "src/voxi-client",
    "src/voxi-core",
    "src/voxi",
    "src/voxi-cli",
    "src/voxi-tests",
    "src/voxi-web-dashboard",
    "src/voxi-tool-executor",
]

[profile.release]
opt-level = "s"  # Optimize for size
debug = 2        # Preserve debuginfo for RPM split-debug extraction
# lto = true       # Disabled: Causes undefined references to vendored C libs in Voxi armv7l GCC ld.
panic = "abort"  # Abort on panic for smaller binary size
# codegen-units = 1 # Disabled: Can interfere with cross-language linking on ARM.

[patch.crates-io]
openssl-src = { path = "third_party/openssl-src" }
