[workspace]
resolver = "2"
members = [
    "crates/rusty-claude-cli",
    "crates/vclaw-api",
    "crates/vclaw-cli",
    "crates/vclaw-commands",
    "crates/vclaw-plugins",
    "crates/vclaw-runtime",
    "crates/vclaw-tools",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
