[package]
name = "voxi-core"
version = "1.0.0"
edition = "2021"
description = "Voxi Core framework and SDK — builds as libvoxi_core.so"

[lib]
name = "voxi_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
libc = "0.2"
libloading = "0.8"
reqwest = { version = "0.12", features = ["native-tls", "blocking"], default-features = false }
