[package]
name = "voxi-tests"
version = "1.0.0"
edition = "2021"
description = "System-test client for Voxi daemon IPC scenarios"

[[bin]]
name = "voxi-tests"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
