[package]
name = "vclaw-runtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
vclaw-api = { path = "../vclaw-api" }
vclaw-commands = { path = "../vclaw-commands" }
vclaw-plugins = { path = "../vclaw-plugins" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
