[package]
name = "vclaw-tools"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
vclaw-api = { path = "../vclaw-api" }
vclaw-plugins = { path = "../vclaw-plugins" }
vclaw-runtime = { path = "../vclaw-runtime" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
